--- a/index.html
+++ b/index.html
@@ -1,11 +1,98 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<link rel="stylesheet" href="style.css" />
+
+<html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="widt, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Monitor Acadêmico</title>
 </head>
 <body>
-    <h1>teste</h1>
+  <h1>Monitoramento de Desempenho Acadêmico</h1>
+
+  <form id="notaForm">
+    <label for="disciplina">Disciplina:</label>
+    <input type="text" id="disciplina" required />
+
+    <label for="nota">Nota:</label>
+    <input type="number" id="nota" step="0.01" required />
+
+    <label for="peso">Peso:</label>
+    <input type="number" id="peso" step="0.01" required />
+
+    <button type="submit">Adicionar</button>
+  </form>
+
+  <table id="tabelaNotas">
+    <thead>
+      <tr>
+        <th>Disciplina</th>
+        <th>Nota</th>
+        <th>Peso</th>
+        <th>Ações</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
+
+  <div class="media" id="mediaFinal">Média Ponderada: 0</div>
+
+  <script>
+    const form = document.getElementById('notaForm');
+    const tabela = document.querySelector('#tabelaNotas tbody');
+    const mediaFinal = document.getElementById('mediaFinal');
+    let dados = [];
+
+    function calcularMedia() {
+      let somaNotas = 0;
+      let somaPesos = 0;
+
+      for (const item of dados) {
+        somaNotas += item.nota * item.peso;
+        somaPesos += item.peso;
+      }
+
+      const media = somaPesos ? (somaNotas / somaPesos).toFixed(2) : 0;
+      mediaFinal.textContent = `Média Ponderada: ${media}`;
+    }
+
+    function atualizarTabela() {
+      tabela.innerHTML = '';
+      dados.forEach((item, index) => {
+        const row = document.createElement('tr');
+        row.innerHTML = `
+          <td>${item.disciplina}</td>
+          <td>${item.nota}</td>
+          <td>${item.peso}</td>
+          <td><button onclick="remover(${index})">Remover</button></td>
+        `;
+        tabela.appendChild(row);
+      });
+
+      calcularMedia();
+    }
+
+    function remover(index) {
+      dados.splice(index, 1);
+      atualizarTabela();
+    }
+
+    form.addEventListener('submit', (e) => {
+      e.preventDefault();
+
+      const disciplina = document.getElementById('disciplina').value;
+      const nota = parseFloat(document.getElementById('nota').value);
+      const peso = parseFloat(document.getElementById('peso').value);
+
+      dados.push({ disciplina, nota, peso });
+
+      form.reset();
+      atualizarTabela();
+    });
+  </script>
+  
+  <script src="script.js"></script>
+
 </body>
 </html>
